Fixed problem with edit link not showing up on studieslist and started working on getting buttons on form to show up with correct css - work in progress.
git-svn-id: http://joomlacode.org/svn/biblestudy/BibleStudy/Trunk@507 a73faa7a-dd35-0410-af13-bd1c84eb1a9d

--- a/components/site/assets/css/biblestudy.css
+++ b/components/site/assets/css/biblestudy.css
@@ -837,3 +837,11 @@
 		border-top: 1px solid #999999;
 		padding: 4px 1px 1px 4px;
 	}
+/*Study Edit CSS */
+#toolbar td.white {
+	background-color:#FFFFFF;
+}
+#toolbar a hover visited{
+	color:0B55C4;
+}
+
